--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -10,13 +10,14 @@ jobs:
       uses: actions/setup-go@v1
       with:
         go-version: 1.13
-      run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | \
-          sh -s -- -b $(go env GOPATH)/bin v1.23.1
-        golangci-lint
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+
+    - name: Install golangci-lint
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.1
+        golangci-lint --version
 
     - name: Exec golangci-lint
       run: golangci-lint run ./... -E misspell
