--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,8 +16,8 @@ jobs:
 
     - name: Install golangci-lint
       run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.23.1
-        golangci-lint --version
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.1
+        $(go env GOPAHT)/bin/golangci-lint --version
 
     - name: Run golangci-lint
-      run: golangci-lint run ./... -E misspell
+      run: $(go env GOPAHT)/bin/golangci-lint run ./... -E misspell
