--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -17,7 +17,6 @@ jobs:
     - name: Install golangci-lint
       run: |
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.1
-        $(go env GOPAHT)/bin/golangci-lint --version
 
     - name: Run golangci-lint
-      run: $(go env GOPAHT)/bin/golangci-lint run ./... -E misspell
+      run: golangci-lint run ./... -E misspell
