--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,14 +16,8 @@ jobs:
 
     - name: Install golangci-lint
       run: |
-        echo $PWD
-        go env
-        printenv
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.1
 
     - name: Run golangci-lint
       run: |
-        echo $PWD
-        go env
-        printenv
-        $(go env GOPATH)/golangci-lint run ./... -E misspell
+        $(go env GOPATH)/bin/golangci-lint run ./... -E misspell
