--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,3 +21,19 @@ jobs:
     - name: Run golangci-lint
       run: |
         $(go env GOPATH)/bin/golangci-lint run ./... -E misspell
+
+  test:
+    name: Unit test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Go 1.13
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.13
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Run unit test
+      run: |
+        go test -v -race ./...
