--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -38,7 +38,7 @@ jobs:
       env:
         GOOGLE_APPLICATION_CREDENTIALS: /usr/local/etc/google/credentials.json
       run: |
-        echo ${{ secrets.GCP_SERVICE_ACCOUNT }} > $GOOGLE_APPLICATION_CREDENTIALS
+        echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" > $GOOGLE_APPLICATION_CREDENTIALS
 
     - name: Run unit test
       run: |
