--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -38,6 +38,7 @@ jobs:
       env:
         GOOGLE_APPLICATION_CREDENTIALS: /usr/local/etc/google/credentials.json
       run: |
+        mkdir -p /usr/local/etc/google
         echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" > $GOOGLE_APPLICATION_CREDENTIALS
 
     - name: Run unit test
