:robot: CI: fix test job

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -36,9 +36,8 @@ jobs:
 
     - name: Set up Google application credentials
       env:
-        GOOGLE_APPLICATION_CREDENTIALS: /usr/local/etc/google/credentials.json
+        GOOGLE_APPLICATION_CREDENTIALS: $HOME/credentials.json
       run: |
-        mkdir -p /usr/local/etc/google
         echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" > $GOOGLE_APPLICATION_CREDENTIALS
 
     - name: Run unit test
