--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -35,11 +35,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Google application credentials
-      env:
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/credentials.json
       run: |
-        echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" > $GOOGLE_APPLICATION_CREDENTIALS
+        echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" > $GITHUB_WORKSPACE/credentials.json
 
     - name: Run unit test
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/credentials.json
       run: |
         make test
